fixed spacing issues

--- a/src/app/app.component.less
+++ b/src/app/app.component.less
@@ -1,40 +1,32 @@
-
-
-
-
-#flex-container{
-    display: flex;
-    justify-content: center;
-    min-height: 900px;
+#flex-container {
+  display: flex;
+  justify-content: center;
+  min-height: 900px;
 }
-
-div#nav-bar ul{
-    list-style: none;
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
-    background-color: #333;
-    font-size: 30px;
-    
-    li{
-       float:left;
-       
-       a{
-         display:block;
-         color: white;
-         text-align: center;
-         padding: 8px;
-         padding: 14px 16px;
-         text-decoration: none;
-          &:hover{
-            background-color: #111;
-         }
-       }
-    }
+#nav-bar ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background-color: #333;
+  font-size: 30px;
+  li {
+      float: left;
+      a {
+          display: block;
+          color: white;
+          text-align: center;
+          padding: 8px;
+          padding: 14px 16px;
+          text-decoration: none;
+          &:hover {
+              background-color: #111;
+          }
+        }
+     }
 }
-
-div#footer-container footer{
- text-align: center;
+#footer-container footer {
+  text-align: center;
   padding: 3px;
   background-color: #333;
   color: white;  
